k8s/demo/crd-spec.yaml
---
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-ui
  labels:
    name: demo-ui
    project: claimguru
    version: "CI_COMMIT_SHORT_SHA"
spec:
  replicas: 1
  selector:
    matchLabels:
      name: demo-ui
      project: claimguru
  template:
    metadata:
      labels:
        name: demo-ui
        project: claimguru
        version: "CI_COMMIT_SHORT_SHA"
    spec:
      securityContext: {}
      containers:
        - name: demo-ui
          securityContext: {}
          image: DOCKER_IMAGE
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            tcpSocket:
              port: http
            periodSeconds: 150
            initialDelaySeconds: 2
          resources: {}
---
# Service
apiVersion: v1
kind: Service
metadata:
  name: demo-ui
  labels:
    name: demo-ui
    project: claimguru
    version: "CI_COMMIT_SHORT_SHA"
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    name: demo-ui
    project: claimguru
---
# Virtual Service
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: demo-ui
  labels:
    name: demo-ui
    project: claimguru
    version: "CI_COMMIT_SHORT_SHA"
spec:
  hosts:
    - claimguru.cilalabs.dev
  gateways:
    - istio-system/claimguru-gateway
  http:
    - match:
        - uri:
            prefix: "/"
      route:
        - destination:
            host: demo-ui
